# systemd-user-sleep

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  flake.lock.license  flake.nix
.cargo/: config.toml
examples/: autorandr-sleep.service  sleep.target  systemd-user-sleep.service
helper/: Cargo.toml
helper/src/: main.rs
src/: api.rs  main.rs  system.rs  user.rs
src/user/: helper.rs
