# SPDX-FileCopyrightText: 2022 Noah Fontes
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "systemd-user-sleep"
version = "0.1.0"
description = "Activate a user sleep target when the system sleeps"
license = "Apache-2.0"
repository = "https://github.com/impl/systemd-user-sleep"
categories = ["command-line-utilities"]
keywords = ["systemd"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.62" }
async-trait = { version = "0.1.57" }
clap = { version = "3.2.17", features = ["derive"] }
env_logger = { version = "0.9.0" }
futures-util = { version = "0.3.21", features = ["std"] }
libc = { version = "0.2.127" }
log = { version = "0.4.17" }
memfd = { version = "0.6.1" }
once_cell = { version = "1.13.0" }
systemd-journal-logger = { version = "0.5.0" }
systemd-user-sleep-helper = { path = "helper", artifact = "bin" }
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3" }
zbus = { version = "2.3.2", default-features = false, features = ["tokio"] }

[workspace]
members = ["helper"]

[profile.release.package.systemd-user-sleep-helper]
strip = "symbols"
